--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.2.0",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^3"
